--- a/practice_excercises/trying_ideas.Rmd
+++ b/practice_excercises/trying_ideas.Rmd
@@ -1,4 +1,4 @@
-I think a ridgeline plot could be really cool... see this website on hoe to make one: https://r-graph-gallery.com/294-basic-ridgeline-plot.html
+I think a ridgeline plot could be really cool... see this website on how to make one: https://r-graph-gallery.com/294-basic-ridgeline-plot.html
 I got some ideas from the website "from data to viz"
 
 For the map, I think it would be really cool to show a density plot of the total scores for that site
@@ -188,7 +188,7 @@ MPS_unnest <- unnest(MPS_unnest, cols = c(standard_operating_procedures))
 MPS_unnest <- unnest(MPS_unnest, cols = c(fishing_sector_collaboration))
 MPS_unnest <- unnest(MPS_unnest, cols = c(funding))
 
-# WARNING: THIS FUCKED UP THE DATA.. PROBABLY SHOULDN'T USE IT NOT SURE WHAT I JUST DID 
+# WARNING: THIS changed UP THE DATA.. PROBABLY SHOULDN'T USE IT NOT SURE WHAT I JUST DID 
 # JUST FOR FUN LET'S SEE IF WE CAN MAKE A SCATTERPLOT WITH IT 
 
 # don't work m8
