--- a/practice_excercises/trying_ideas.Rmd
+++ b/practice_excercises/trying_ideas.Rmd
@@ -472,7 +472,7 @@ ggplot(lolli_cat_score) +
     axis.text.y = element_text(size = 7), 
     plot.title = element_text(size = 12)
   ) +
-  labs(title = "Comaring Four Sites in Ecuador in 2022", size = 1) +
+  labs(title = "Comparing Four Sites in Ecuador in 2022", size = 1) +
   xlab("Scoring Category") +
   ylab("Score") +
   facet_wrap(~site, ncol=1, scale="free_y")
