--- a/practice_excercises/trying_ideas.Rmd
+++ b/practice_excercises/trying_ideas.Rmd
@@ -459,7 +459,7 @@ lolli_cat_score <- bind_rows(sub1, sub2, sub3, sub4)
 
          
 # make our grouped lollipop plot
-ggplot(lolli_cat_score) +
+ggloli <- ggplot(lolli_cat_score) +
   geom_segment( aes(x=category, xend=category, y=0, yend=score), color="grey") +
   geom_point( aes(x=category, y=score, color=site), size=3 ) +
   coord_flip()+
@@ -476,6 +476,10 @@ ggplot(lolli_cat_score) +
   xlab("Scoring Category") +
   ylab("Score") +
   facet_wrap(~site, ncol=1, scale="free_y")
+
+library(plotly) 
+fig <- ggplotly(ggloli)
+fig
 ```
 
 
