--- a/site_map.Rmd
+++ b/site_map.Rmd
@@ -15,6 +15,8 @@ library(leaflet)
 library(dplyr)
 library(googlesheets4)
 library(janitor)
+library(stringi)
+library(leaflet.extras)
 ```
 
 # Read data from CSV file
@@ -25,23 +27,36 @@ url <- "https://docs.google.com/spreadsheets/d/1945sRz1BzspN4hCT5VOTuiNpwSSaWKxf
 
 sites <- read_sheet(url) |> 
   clean_names() |> 
-  select(site, latitude, longitude)
+  select(site, latitude, longitude, status, active_site) |> 
+  separate(status, into = c("status_numb", "status_key"), sep = " - ") |> 
+  mutate(status_numb = as.numeric(status_numb)) |> 
+  filter(active_site == "current")
   
 ```
 
 # Define your scoring scale and associated colors
 ```{r}
-score_scale <- c(1, 2, 3, 4, 5)  # Example scoring scale
-color_palette <- colorRampPalette(c("#00A6A6", "#7FB069", "#094074", "#F4D067", "#E17000"))(n = length(score_scale) - 1)
+score_scale <- c(1, 2, 3, 4, 5, 6)  # Example scoring scale
+color_palette <- c("#00A6A6", "#7FB069", "#094074", "#F4D067", "#E88B84", "#E17000")
+status_word <- c("1: Discovery", "2: Partnership", "3: Enforcement design", "4: Implimentation", "5: Mentorship", "6: Regional Leadership")
+
+# make a little dataframe to join the colors to the number column 
+color_df <- data.frame(status_numb = score_scale, 
+                       colors = color_palette, 
+                       word = status_word)
+
+# left join to the status_numb column 
+sites_w_color <- left_join(sites, color_df, by = "status_numb")
 ```
 
 
-# Create a function to map scores to colors
+# Create a function to map scores to colors ----
 ```{r}
-score_to_color <- function(score) {
-  color_idx <- findInterval(score, score_scale, all.inside = TRUE)
-  return(color_palette[color_idx])
-}
+# not necessary for now: 
+# score_to_color <- function(score) {
+#   color_idx <- findInterval(score, score_scale, all.inside = TRUE)
+#   return(color_palette[color_idx])
+# }
 ```
 
 
@@ -50,15 +65,18 @@ score_to_color <- function(score) {
 map <- leaflet(sites) %>%
   addTiles() %>% # Add default tile layers
    
-  addCircleMarkers(data = sites, 
+  addCircleMarkers(data = sites_w_color, 
                    lat = ~latitude, 
                    lng = ~longitude, 
                    radius = 10, 
-                   color = ~score_to_color(score_scale),
+                   color = ~colors,
                     label = ~as.character(site),
                    # Use the score_to_color function to map scores to colors,  Set label as site name
                    fillOpacity = 0.8) %>%
-  setView(lng = -9.4919, lat = 30.6081, zoom = 1.5) # Set initial map view
+  setView(lng = -9.4919, lat = 30.6081, zoom = 1.5) %>% # Set initial map view
+  addLegend(colors = color_palette,
+            labels = status_word,
+            position = "bottomright")
 ```
 # Print the map
 ```{r}
